Update README.md
Added VM argument solving java.lang.reflect.InaccessibleObjectException